--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==4.1.2
 django-extensions==3.2.1
+django-htmx==1.12.2
 django-widget-tweaks==1.4.12
 Pillow==9.2.0
 sqlparse==0.4.3
